<resources>
    //HelloApp
    <string name="app_name">OrderPizza</string>
    <string name="hello_text">Welcome dear customer!</string>
    <string name="tab_guest">Guest</string>
    <string name="tab_member">Member</string>
    <string name="btn_language">Tiếng Việt</string>
    //Login
    <string name="table_number">Please enter table number</string>
    <string name="phone">Please enter your phone number!</string>
    <string name="otp_now">Send OTP code</string>
    <string name="otp">Enter OTP code</string>
    <string name="login">Go to Home</string>
    <string name="enter_number">Please enter table number</string>
    <string name="enter_login">Login successful! Table number: %1$s</string>
    <string name="error_login">Login error!</string>
    <string name="error_phone">Please enter phone number</string>
    <string name="email">Email</string>
    <string name="error_otp">OTP is incorrect</string>
    <string name="enter_otp">Please enter OTP code!</string>
    //Home
    <string name="search">Search for food...</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="greeting_text">Good afternoon</string>
    <string name="guest_label">Dear Customer!</string>
    <string name="order">Order</string>
    <string name="contact_staff">Call Staff</string>
    <string name="feedback">Feedback</string>
    <string name="suggestion_title">You Might Like</string>
    <string name="promotion_title">Super Deals</string>
    <string name="pizza_promo">Promo Pizza</string>
    <string name="pizza_three_slices">Three-Slice Pizza</string>
    <string name="pizza_offer">Offer Pizza</string>
    <string name="pizza_special">Special Pizza</string>
    <string name="menu_title">Menu</string>
    <string name="add">Add</string>
    <string name="combo_1">COMBO 1</string>
    <string name="combo_three_people">COMBO for 3 People</string>
    <string name="combo_lunch">Lunch COMBO</string>
    <string name="combo_4">COMBO 4</string>
    <string name="combo_one_person">COMBO for 1 Person</string>
    <string name="contact_pizza_hot">Contact PIZZA HOT</string>
    <string name="support_text">Need assistance?</string>
    <string name="phone_underlined">Hotline: 0123 456 789</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="greeting_morning">Good morning _ </string>
    <string name="greeting_noon">Good afternoon _ </string>
    <string name="greeting_afternoon">Good afternoon _ </string>
    <string name="greeting_evening">Good evening _ </string>
    <string name="table_info">We will deliver to your table: TABLE %s</string>
    <string name="support_dialog_title">Call Support</string>
    <string name="support_dialog_message">Would you like to call 19001182?</string>
    <string name="support_dialog_call">Call</string>
    <string name="support_dialog_cancel">Cancel</string>
    <string name="add_product">Added %1$s to cart</string>
    //Item Home
    <string name="menu_item_name_placeholder">Pizza Title</string>
    <string name="menu_item_description_placeholder">Pizza Description</string>
    <string name="menu_item_price_placeholder">%s VND</string>
    <string name="add_to_cart_button">Add to Cart</string>
    //Cart
    <string name="table">Table number: %s</string>
    <string name="total_amount">Total Amount: %s VND</string>
    <string name="checkout_button">Place Order</string>
    //Item Cart
    <string name="item_name_placeholder">Margherita Pizza</string>
    <string name="item_price_placeholder">%s VND</string>
    <string name="item_note_hint">Note for the item (e.g., less spicy, extra cheese...)</string>
    <string name="delete_button_description">Delete</string>
    <string name="save_note_button_description">Save note</string>
    <string name="decrease_button_description">Decrease</string>
    <string name="increase_button_description">Increase</string>
    <string name="item_deleted">Delete: %1$s</string>
    <string name="note_saved">Note has been saved</string>
    //Contact
    <string name="contact_staff_title">Contact Staff</string>
    <string name="contact_message_hint">What assistance do you need from the staff?</string>
    <string name="contact_call_button">Call Now</string>
    //Feedback
    <string name="select_image_button">Select Image</string>
    <string name="feedback_title">Rate Your Experience</string>
    <string name="feedback_hint">Your feedback...</string>
    <string name="submit_rating_button">Submit Feedback</string>
    <string name="review_input_required">Please enter a review and select a rating!</string>
    <string name="review_time_placeholder">Reviewed on: %s</string>
    //Menu
    <string name="tab_buy_one_get_one">BUY 1 GET 2</string>
    <string name="tab_buy_one_get_three">BUY 1 GET 3</string>
    <string name="tab_combo">COMBO</string>
    <string name="tab_pizza">PIZZA</string>
    <string name="tab_drinks">DRINKS</string>
    <string name="tab_my_box">MY BOX</string>
    <string name="tab_menu_49k">49K MENU</string>
    <string name="tab_pasta">PASTA</string>
    //Item Product
    <string name="promo_title_placeholder">BUY 1 GET 1 FREE PIZZA</string>
    <string name="promo_description_placeholder">Buy Medium Pizza + Drink</string>
    <string name="promo_price_placeholder">Price: %s VND</string>
    //Notification
    <string name="tab_promotion_news">Promotion News</string>
    <string name="tab_user_news">Your News</string>
    <string name="empty_messages_text">No messages</string>
    //Order
    <string name="order_history_title">Order History</string>
    <string name="required">Login Required</string>
    <string name="required_phone">Please log in with your phone number to access this feature!</string>
    <string name="phone_not_found">Phone number not found. Please log in.</string>
    //Item Order
    <string name="order_id_label">Order ID:</string>
    <string name="total_amount_label">Total Amount:</string>
    <string name="timestamp_label">Time:</string>
    <string name="items_ordered_label">Items Ordered</string>
    <string name="item_line">- %1$s x%2$d (%3$s VND%4$s)</string>
    <string name="note_text">; Note: %1$s</string>
    //Payment
    <string name="payment_title">Payment</string>
    <string name="payment_method_prompt">How would you like to pay?</string>
    <string name="payment_option_cash">💵 Cash</string>
    <string name="payment_option_card">💳 Bank Card</string>
    <string name="payment_option_mobile_app">📱 Mobile App</string>
    <string name="confirm_payment_button">Confirm Payment</string>
    //Review
    <string name="customer_reviews_title">Customer Reviews</string>
    //Item Review
    <string name="review_comment_placeholder">Comment</string>
    <string name="review_user_placeholder">User</string>
    //Terms
    <string name="terms_title">TERMS AND CONDITIONS</string>
    <string name="terms_content">
1. Introduction\n
Welcome to our application! By using our services, you agree to the terms outlined below.\n
2. Acceptance of Terms\n
When using the application, you commit to complying with all regulations and terms we set forth.\n
3. Rights and Obligations\n
You must not use the application for illegal purposes or to harm others.\n
4. Information Privacy\n
Your personal information will be protected by us and used only with your permission.\n
5. Modification of Terms\n
We reserve the right to update the content of these terms at any time.\n
6. Contact\n
If you have any questions, please contact us via email: pizzahot@gmail.com
    </string>
    //User
    <string name="user_avatar_description">User avatar</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="track_order_option">Track Order</string>
    <string name="navigation_arrow_description">Navigation arrow</string>
    <string name="membership_option">Membership</string>
    <string name="account_icon_description">Account icon</string>
    <string name="notifications_option">Notifications</string>
    <string name="notification_icon_description">Notification icon</string>
    <string name="contact_option">Contact</string>
    <string name="contact_icon_description">Contact icon</string>
    <string name="facebook_icon_description">Facebook icon</string>
    <string name="email_icon_description">Email icon</string>
    <string name="switch_to_english_option">Switch to Vietnamese</string>
    <string name="support_email">Gmail: support@pizzapp.vn</string>
    //Logout
    <string name="logout_confirm_title">Confirm Logout</string>
    <string name="logout_confirm_message">Are you sure you want to log out?</string>
    <string name="logout_confirm_yes">Log out</string>
    <string name="logout_confirm_no">Cancel</string>
    //Nav menu
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="user">Personal page</string>
    <string name="review">Reviews</string>
    <string name="logout">Log out</string>

</resources>