<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Tiêu đề -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/icon_person"
                    android:contentDescription="@string/user_avatar_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/account_settings_title"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- 1. Theo dõi đơn hàng -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="#4CAF50"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/track_order_option"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingStart="10dp"/>

                <ImageView
                    android:id="@+id/muiten"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/right"
                    android:contentDescription="@string/navigation_arrow_description" />
            </LinearLayout>

            <!-- 2. Thành viên -->
            <LinearLayout
                android:id="@+id/tabthanhvien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_textview"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingVertical="12dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/icon_account"
                    android:contentDescription="@string/account_icon_description"
                    android:padding="1dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/membership_option"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 3. Thông báo -->
            <LinearLayout
                android:id="@+id/tabthongbao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_textview"
                android:clickable="true"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/icon_bell"
                    android:contentDescription="@string/notification_icon_description"
                    android:padding="1dp"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_option"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 4. Liên hệ -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border_textview"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_option"
                    android:textSize="16sp"
                    android:paddingLeft="10dp" />

                <ImageView
                    android:id="@+id/icon_lienhe"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/icon_lienhe"
                    android:contentDescription="@string/contact_icon_description" />

                <ImageView
                    android:id="@+id/icon_fb"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/icon_fb"
                    android:contentDescription="@string/facebook_icon_description" />

                <ImageView
                    android:id="@+id/icon_email"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/icon_email"
                    android:contentDescription="@string/email_icon_description" />
            </LinearLayout>

            <!-- 5. Gmail cửa hàng -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvSupport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="12dp"
                    android:text="@string/support_email"
                    android:textColor="#555555"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
