<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CartFragment">

    <TextView
        android:id="@+id/tableNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:textColor="@color/red"
        android:background="@drawable/bg_blue_rounded"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tableNumberText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/totalLayout" />

    <LinearLayout
        android:id="@+id/totalLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="end"
            android:padding="8dp" />

        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout_button"
            android:textSize="18sp"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
